# DespillAP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  Taskfile.yml
.devcontainer/linux/: devcontainer.json
.devcontainer/windows/: devcontainer.json
COMPILED/MAC/15.1v5/: DespillAP.dylib
COMPILED/MAC/16.0v1/: DespillAP.dylib
blinkscript/: Despill.blink  despillKernel.blink
cmake/: findBoost.cmake
documentation/: AFXDESPILL.cpp  DDMath.cpp  Vector3.cpp
include/: Attribute.h  Bounds.h  Color.h  Constants.h  DespillAP.h  Dispatcher.h  Image.h  Pixel.h  Threading.h  Utils.h
src/: CMakeLists.txt  DespillAP.cpp  DespillAP.h  Threading.cpp  despillKernel.blink
